# brainprocessing

./: .gitignore  LICENSE  README.md  basilreport_validation_colab.ipynb  pyproject.toml  start_brainprocessing.sh
example/style/: style.css
src/brainprocessing/reports/: basilreport.py  standalone_html.py
