[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
version.raw-options.local_scheme = "no-local-version"
build.hooks.vcs.version-file = "src/brainprocessing/version.py"

[project]
name = "brainprocessing"
dynamic = ["version"]
authors = [
  { name="Chidi Ugonna", email="chidiugonna@arizona.edu" },
]
description = "brain processing utilities"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "nipype>=1.8.3",
  "dominate>=2.5.1",
  "nibabel>=5.1.0",
  "pybids>=0.16.3",
  "numpy>=1.26.1",
  "pandas>=2.1.1",
  "nitransforms>=23.0.1",
  "nilearn>=0.10.2",
  "matplotlib>=3.8.0",
  "beautifulsoup4>=4.12.2"
]

[project.urls]
"Homepage" = "https://github.com/neurocpu/brainprocessing"
"Bug Tracker" = "https://github.com/MRIresearch/brainprocessing/issues"